--- a/jupyter_config.json
+++ b/jupyter_config.json
@@ -1,3 +1,3 @@
-{
-  "LabApp": { "collaborative": true, "expose_app_in_browser": true }
-}
+// {
+//   "LabApp": { "collaborative": true, "expose_app_in_browser": true }
+// }
